# GPT-Synthesizer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: python-publish.yml
gpt_synthesizer/: app.py  generate_code.py  generate_main.py  main.py  model.py  parser.py  prompt.py  run_app.py  test_logging.py  testing.py  ui.py
