[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-synthesizer"
version = "0.0.2"
description = "Collaboratively build an entire codebase for any project with the help of an AI"
readme = "README.md"
authors = [{ name = "RoboCoach Technologies", email = "robocoachtechnologies@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators "
]
keywords = ["Large Language Models", "AI-assisted Code Generation"]
dependencies = [
    "langchain[openai]"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/RoboCoachTechnologies/GPT-Synthesizer"
"Bug Tracker" = "https://github.com/RoboCoachTechnologies/GPT-Synthesizer/issues"

[project.scripts]
gpt-synthesizer = "gpt_synthesizer.main:main"

[tool.setuptools]
packages = ["gpt_synthesizer"]
